ゲームモードのデフォルトマップの変更

--- a/Config/DefaultEngine.ini
+++ b/Config/DefaultEngine.ini
@@ -3,7 +3,7 @@ GameName=GameJam_TeamJ
 
 [/Script/EngineSettings.GameMapsSettings]
 EditorStartupMap=/Game/Stage/Stage.Stage
-GameDefaultMap=/Game/Stage/Stage.Stage
+GameDefaultMap=/Game/UI/Title/TitleMap.TitleMap
 TransitionMap=
 bUseSplitscreen=True
 TwoPlayerSplitscreenLayout=Horizontal
